# Intelligent-AI-Network-Diagnostic-Platform

./: LICENSE  README-EN.md  README.md
backend/: .coverage  .env  .env.example  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: __init__.py  api.py
backend/app/api/api_v1/endpoints/: __init__.py  ai.py  health.py  network.py  terminal.py
backend/app/config/: settings.py
backend/app/core/: __init__.py  ssh.py  ssh_with_pagination.py  telnet.py  terminal.py
backend/app/core/network/: __init__.py  base.py
backend/app/core/network/telnet/: __init__.py  connection.py  manager.py  protocols.py
backend/app/core/network/telnet/devices/: __init__.py  huawei.py
backend/app/models/: ai.py  deepseek.py  network.py  terminal.py
backend/app/services/: ai_service.py  deepseek_service.py  network_service.py  terminal_service.py
backend/app/services/ai/: __init__.py  base.py  manager.py
backend/app/services/ai/deepseek/: __init__.py  analyzer.py  client.py
backend/app/services/ai/providers/: __init__.py  claude_provider.py  deepseek_provider.py  openai_provider.py
backend/app/utils/: logger.py  model_config.py  security.py
discuss/: optimization-plan-2025-09-07-2129.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/assets/: main.css
frontend/src/components/: ChatMessage.jsx
frontend/src/components/ai-assistant/: AIAssistant.vue
frontend/src/components/ai-assistant/components/: ChatHeader.vue  ChatInput.vue  ChatMessages.vue  ModelSelector.vue  StreamToggle.vue  index.ts
frontend/src/components/common/: ServerStatusIndicator.vue
frontend/src/components/common/icons/: ClearIcon.vue  ConnectIcon.vue  DisconnectIcon.vue  MoonIcon.vue  SendIcon.vue  SunIcon.vue  index.ts
frontend/src/components/terminal/: NetworkTerminal.vue
frontend/src/components/ui/: CardSpotlight.vue  FloatingParticlesBackground.vue  RippleButton.vue  ShimmerButton.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/stores/: aiAssistant.ts  app.ts  terminal.ts
frontend/src/stores/ai-assistant/: index.ts  state.ts
frontend/src/stores/ai-assistant/actions/: connection.ts  messaging.ts  storage.ts  utils.ts
frontend/src/stores/ai-assistant/types/: index.ts
frontend/src/types/: chat.ts  index.ts
frontend/src/utils/: aiService.ts  helpers.ts  localStorageUtils.ts  terminalService.ts
scripts/: backend_dev.sh  build.ps1  build.sh  dev.ps1  dev.sh  lint.ps1  lint.sh  prod.ps1  prod.sh  setup.ps1  setup.sh  start-backend.ps1  test-backend-logging.ps1  test.ps1  test.sh  venv-manager.ps1
